--- a/MC1 Test/stylesheets/resume.css
+++ b/MC1 Test/stylesheets/resume.css
@@ -32,6 +32,12 @@ tr.shown td.details-control {
   text-align: center;
 }
 
+label {
+  font-family: Verdana;
+  background-color: #efefef;
+}
+
+
 .button {
   -moz-box-shadow:inset 0px 0px 0px 0px #ffffff;
   -webkit-box-shadow:inset 0px 0px 0px 0px #ffffff;
@@ -77,3 +83,32 @@ tr.shown td.details-control {
   top:1px;
 }
 /* This button was generated using CSSButtonGenerator.com */
+
+input[type=checkbox].css-checkbox {
+position: absolute; 
+overflow: hidden; 
+clip: rect(0 0 0 0); 
+height:1px; 
+width:1px; 
+margin:-1px; 
+padding:0;
+border:0;
+}
+
+input[type=checkbox].css-checkbox + label.css-label {
+padding-left:20px;
+height:20px; 
+display:inline-block;
+line-height:20px;
+background-repeat:no-repeat;
+background-position: 0 0;
+font-size:15px;
+vertical-align:middle;
+cursor:pointer;
+}
+
+input[type=checkbox].css-checkbox:checked + label.css-label {
+background-position: 0 -20px;
+}
+
+.css-label{ background-image:url(http://csscheckbox.com/checkboxes/web-two-style.png); }
